src/main/java/org/example/error/enums/ErrorType.java
package org.example.error.enums;

public enum ErrorType {

	// lexical
	UNDEFINED_TOKEN,
	NUMERIC_LIMIT_EXCEEDED,
	TEXT_LENGTH_EXCEEDED,
	IDENTIFIER_LENGTH_EXCEEDED,
	COMMENT_LENGTH_EXCEEDED,
	END_OF_FILE_REACHED

	// syntactic
	// semantic
}
